--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/SF-WDI-LABS/express_self_api",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "ejs": "^2.4.2",
     "express": "^4.13.4",
     "mongoose": "^4.4.10"
   }
